<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.mcgill.ecse321.projectgroup04.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FF0000"
            android:visibility="gone" />



        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingTop="25dp"
            android:text="Appointment Booking"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Spinner
            android:id="@+id/servicespinner"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="0dp"
            android:hint="Service" />

        <Spinner
            android:id="@+id/technicianspinner"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="0dp" />

        <Spinner
            android:id="@+id/spotspinner"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="00dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:text="@string/newappointment_date_label" />

            <TextView
                android:id="@+id/newappointment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:onClick="showDatePickerDialog"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:text="@string/newappointment_date_first" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="363dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:text="@string/starttime_label" />

            <TextView
                android:id="@+id/starttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:onClick="showTimePickerDialog"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:text="@string/starttime_first" />
        </LinearLayout>


        <Button
            android:id="@+id/bookAppointment"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"

            android:layout_marginRight="50dp"
            android:layout_marginBottom="00dp"
            android:backgroundTint="#696969"
            android:gravity="center"
            android:text="@string/book"
            android:textColor="#FFFFFF"
            android:translationX="35dp" />


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navigationBarEmergencyService"
            android:layout_width="match_parent"

            android:layout_height="match_parent">

        <LinearLayout

            android:id="@+id/navBarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#000000"
                android:text="Emergency"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

            <Button
                android:id="@+id/logOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#000000"
                android:text="@string/log_out"
                android:textColor="#FFFFFF" />

        </LinearLayout>
        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </LinearLayout>

    </ScrollView>


</RelativeLayout>